test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-create-policy-valid/01-script-try-create.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script-try-create
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl apply -f policy.yaml\nthen\n  echo \"Test succeeded. Policy
        was created as intended.\"\n  exit 0 \nelse \n  echo \"Tested failed. Policy
        was not created when it should have been.\"\n  exit 1\nfi\n"
