test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-create-policy-valid/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-sync-create-policy-valid
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: "if kubectl apply -f policy.yaml\nthen\n  echo \"Test succeeded.
          Policy was created as intended.\"\n  exit 0 \nelse \n  echo \"Tested failed.
          Policy was not created when it should have been.\"\n  exit 1\nfi\n"
